Added version info for 3.4.0 and 3.4.1

--- a/info.html
+++ b/info.html
@@ -1,3 +1,16 @@
+<h2>Version 3.4.1</h2>
+<ul>
+    <li>Fixed background color for various LAFs</li>
+    <li>Table header height is same as row height</li>
+</ul>
+
+<h2>Version 3.4.0</h2>
+<ul>
+    <li>Project converted to Maven and Git</li>
+    <li>Fixed deleting row when filtering is active</li>
+    <li>Moving rows disabled when filtering is active</li>
+</ul>
+
 <h2>Version 3.2.0</h2>
 <ul>
     <li>Added button which defines is first row header row or not</li>
