--- a/info.html
+++ b/info.html
@@ -1,3 +1,9 @@
+<h2>Version 3.4.2</h2>
+<ul>
+    <li>Fixed selecting default separator</li>
+    <li>Fixed width of row number column</li>
+</ul>
+
 <h2>Version 3.4.1</h2>
 <ul>
     <li>Fixed background color for various LAFs</li>
