--- a/info.html
+++ b/info.html
@@ -1,3 +1,8 @@
+<h2>Version 3.4.4</h2>
+<ul>
+    <li>Fixed minor typo errors</li>
+</ul>
+
 <h2>Version 3.4.2</h2>
 <ul>
     <li>Fixed selecting default separator</li>
